# BoramClaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COST_ANALYSIS.md  DAEMON_MODE.md  DAILY_RECAP_SETUP.md  LINKEDIN_POST_DRAFT.md  MCP_SETUP_GUIDE.md  NATURAL_LANGUAGE_DEMO.md  OLLAMA_SETUP.md  PROJECT_SUMMARY.md  PROMPT_QUALITY.md  README.md  SECURITY_REVIEW.md  boram  builtin_tools.py  check_dependencies.py  codex_adapter.py  config.py  context_engine.py  daily_retrospective.py  dashboard.py  gateway.py  get_telegram_chat_id.py  guardian.py  health_server.py  implementation_checklist.md  insight.md  install_autodashboard_sync.py  install_daemon.py  keychain_helper.py  linkedin_post.md  logger.py  main.py  mcp_server.py  memory_store.py  messenger_bridge.py  metrics_dashboard.py  multi_agent.py  (+21 more)
.claude/: mcp.json
agent_tools/: README.md  echo_tool.py
comfyui/: README.md
config/: rules.yaml  study_plan.json  vc_gateway.json.example  vc_tenants.json
docs/: STUDY_TRACKING.md
roadmap_500/: 00_MASTER.md  01_critical_level3_guardian.md  02_critical_level4_emergency_recovery.md  03_critical_gateway_split.md  04_critical_tool_first_intent.md  05_critical_install_daemon.md  06_critical_health_endpoint.md  07_critical_log_rotation_integration.md  08_critical_network_sandbox.md  09_important_persistent_memory.md  10_important_permission_system.md  11_important_api_key_encryption.md  12_important_token_metrics.md  13_important_error_handling.md  14_important_test_coverage.md  15_nice_cli_packaging.md  16_nice_dashboard_debug.md  17_nice_integrations.md  (+3 more)
(+127 files in other folders)
